# midterm

./: CMakeLists.txt  README.md  package.xml
config/: controller_manager.yaml
launch/: display.launch  gazebo.launch
meshes/: armbase_link.STL  base_link.STL  camera_link.STL  caster_link.STL  ef_link.STL  left_link.STL  lidar_link.STL  right_link.STL  rotation_link.STL  rulet_link.STL
scripts/: camera.py  lidar.py  mobile_goal_client.py  mobile_goal_server.py  test_arm.py  test_mobile.py
urdf/: robot1.urdf
