<?xml version="1.0"?>
<package format="2">
  <name>robot1</name>
  <version>1.0.0</version>

  <description>
    <p>URDF Description package for robot1</p>
    <p>This package contains configuration data, 3D models and launch files
for robot1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>rospy</depend>
  <depend>position_controllers</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>nav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>